--- a/pages/login.html
+++ b/pages/login.html
@@ -19,10 +19,15 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
         integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/css/bootstrap-select.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css" />
+    
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/js/bootstrap-select.min.js"></script>
     <script src="../js/app.js"></script>
 
 </head>
@@ -212,14 +217,14 @@
         <div id="register-content" class="content">
 
             <!-- white right section -->
-            <div class="rightside">
-                <form class="form-horizontal form-inline" action="" name="loginform">
+            <div class="rightside inline-div">
+                <form class="form-horizontal form-inline" id="register-form" method="POST" name="loginform">
 
                     <!-- name label -->
                     <p id="name-label" class="hidden-title">نام و نام خانوادگی</p>
 
                     <!-- name input -->
-                    <div class=" form-group col-sm-12">
+                    <div class=" form-group col-sm-12 inline-div">
                         <span class="col-sm-2"><i class="far fa-user"></i></span>
                         <input type="text" class="col-sm-9  border-top-0 border-right-0 border-left-0" id="login-user"
                             name="username" onmouseover="ShowLabel('name-label')" onmouseout="HideLabel('name-label')"
@@ -229,7 +234,7 @@
                     </div>
 
                     <!-- name error -->
-                    <div id="nameerror-div" class="hidden-error col-sm-10 ">
+                    <div id="nameerror-div" class="hidden-error col-sm-10 inline-div">
                         <span id="nameerror"></span>
                         <i style="text-align: left" class="fas fa-exclamation-triangle"></i>
                     </div>
@@ -238,7 +243,7 @@
                     <p id="register-email-label" class="hidden-title">پست الکترونیک</p>
 
                     <!-- email input -->
-                    <div class=" form-group  col-sm-12">
+                    <div class=" form-group  col-sm-12 inline-div">
 
                         <span class="col-sm-2"><i class="far fa-envelope"></i></span>
                         <input type="text" class="col-sm-9  border-top-0 border-right-0 border-left-0"
@@ -251,16 +256,16 @@
                     </div>
 
                     <!-- email error -->
-                    <div id="register-emailerror-div" class="hidden-error col-sm-10 ">
+                    <div id="register-emailerror-div" class="hidden-error col-sm-10  inline-div">
                         <span id="register-emailerror"></span>
                         <i style="text-align: left" class="fas fa-exclamation-triangle"></i>
                     </div>
-
+                 
                     <!-- pass label -->
                     <p id="register-pass-label" class="hidden-title">رمز عبور</p>
 
                     <!-- pass input -->
-                    <div class=" form-group  col-sm-12">
+                    <div class=" form-group  col-sm-12 inline-div">
                         <span class="col-sm-2"><i class="fas fa-lock"></i></span>
                         <input type="password" class="col-sm-9  border-top-0 border-right-0 border-left-0"
                             id="registerpass" name="password" onmouseover="ShowLabel('register-pass-label')"
@@ -271,7 +276,7 @@
                     </div>
 
                     <!-- pass error -->
-                    <div id="register-passerror-div" class="hidden-error col-sm-10">
+                    <div id="register-passerror-div" class="hidden-error col-sm-10 inline-div">
                         <span id="register-passerror"></span>
                         <!-- text-align doesnt work on span tag because its inline by default-->
                         <i style="text-align: left" class="fas fa-exclamation-triangle"></i>
@@ -281,7 +286,7 @@
                     <p id="repass-label" class="hidden-title"> تکرار رمز عبور</p>
 
                     <!-- repass input  -->
-                    <div class=" form-group  col-sm-12">
+                    <div class=" form-group  col-sm-12 inline-div">
                         <span class="col-sm-2"><i class="fas fa-lock"></i></span>
                         <input type="password" onmouseover="ShowLabel('repass-label')"
                             onmouseout="HideLabel('repass-label')" onkeyup="ValidateRepass()" oninput="ValidateRepass()"
@@ -290,19 +295,27 @@
                     </div>
 
                     <!-- repass error -->
-                    <div id="repasserror-div" class="hidden-error col-sm-10 ">
+                    <div id="repasserror-div" class="hidden-error col-sm-10 inline-div">
                         <span id="repasserror"></span>
                         <!-- text-align doesnt work on span tag because its inline by default-->
                         <i style="text-align: left" class="fas fa-exclamation-triangle"></i>
                     </div>
-
+                    <div class="select-div col-sm-12">
+                        <select title="نقش خود را انتخاب کنید" name="role" class="selectpicker"  data-live-search="true">
+                                <option>دانشجو</option>
+                                <option>استاد</option>
+                                <option>مدیر</option>
+                                <option>کارمند</option>
+                                <option>استاد و مدیر</option>
+                        </select>
+                     </div>
                     <!-- register button -->
-                    <div class="login-button form-group  col-sm-12" style="margin-top : 5%;">
-                        <button type="button" class=" col-sm-5 btn  btn-block btn-success">ثبت نام</button>
+                    <div class="login-button form-group  col-sm-12 inline-div" style="margin-top : 3%;">
+                        <button type="button" id="register-submit" class=" col-sm-5 btn  btn-block btn-success">ثبت نام</button>
                     </div>
 
                     <!-- register with google button -->
-                    <div class="login-button form-group  col-sm-12">
+                    <div class="login-button form-group  col-sm-12 inline-div">
                         <button type="button" class=" col-sm-5 btn btn-block btn-social btn-google">
                             <i class="fab fa-google"></i> ثبت نام با گوگل
                         </button>
@@ -311,11 +324,11 @@
             </div>
 
             <!-- left green section -->
-            <div class="leftside">
+            <div class="leftside inline-div">
                 <!-- circle image -->
                 <div class="circle-img col-sm-12">
                     <div class="circle">
-                        <img class="leftside-top" src="../images/shahid_beheshti_university.jpg" alt="sbu">           
+                        <img class="leftside-top" src="../Assets/images/shahid_beheshti_university.jpg" alt="sbu">           
                     </div>
                 </div>
                 <!-- switch to login -->
@@ -412,7 +425,7 @@
                 <!-- circle image -->
                 <div class="circle-img col-sm-12">
                     <div class="circle">
-                            <img class="leftside-top" src="../images/shahid_beheshti_university.jpg" alt="sbu">   
+                            <img class="leftside-top" src="../Assets/images/shahid_beheshti_university.jpg" alt="sbu">   
                     </div>
                 </div>
 
@@ -453,7 +466,7 @@
                     تمامی حقوق وبسایت نزد دانشگاه شهید بهشتی محفوظ است.
                 </div>
                 <div class="trust col-md-3 col-sm-6 col-4">
-                    <img src="../images/logo.png" alt="etemad">
+                    <img src="../Assets/images/logo.png" alt="etemad">
                 </div>
             </div>
         </div>
