--- a/pages/login.html
+++ b/pages/login.html
@@ -22,12 +22,13 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
         integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/css/bootstrap-select.css" />
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/css/bootstrap-select.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css" />
-    
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/js/bootstrap-select.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/js/bootstrap-select.min.js"></script>
     <script src="../js/app.js"></script>
 
 </head>
@@ -80,118 +81,119 @@
 
     <!-- this div is common in all pages -->
     <!-- green top fixed position header-->
-    <header>
+    <div class="green-nav">
+        <header>
 
-        <!-- green navbar shown at load -->
-        <div id="list-nav" class="row">
-            <!-- line bar button hidden on load(will shown on mobile resolutions) -->
-            <div class="navbar-left hidden">
-                <button id="linebar" class="btn"><i class="fas fa-bars"></i></button>
-            </div>
+            <!-- green navbar shown at load -->
+            <div id="list-nav" class="row">
+                <!-- line bar button hidden on load(will shown on mobile resolutions) -->
+                <div class="navbar-left hidden">
+                    <button id="linebar" class="btn"><i class="fas fa-bars"></i></button>
+                </div>
 
-            <!-- info section, image and title of page -->
-            <div class="info">
-                <span><i class="fas fa-graduation-cap"></i></span>
-                <span>مکتب خانه دانشکاه شهید بهشتی</span>
-            </div>
+                <!-- info section, image and title of page -->
+                <div class="info">
+                    <span><i class="fas fa-graduation-cap"></i></span>
+                    <span>مکتب خانه دانشکاه شهید بهشتی</span>
+                </div>
 
-            <!-- a list of categories of page -->
-            <nav>
-                <!-- some tabs have sub list -->
-                <ul>
-                    <li>
-                        <a href="#">صفحه اصلی</a>
-                    </li>
-                    <div class="subnav">
-                        <button class="subnav-btn">آموزش</button>
+                <!-- a list of categories of page -->
+                <nav>
+                    <!-- some tabs have sub list -->
+                    <ul>
+                        <li>
+                            <a href="#">صفحه اصلی</a>
+                        </li>
+                        <div class="subnav">
+                            <button class="subnav-btn">آموزش</button>
 
-                        <div class="subnav-content" id="sub-nav-1">
+                            <div class="subnav-content" id="sub-nav-1">
 
-                            <a href="#">
-                                قالب سایت
-                            </a>
-                            <a href="#">
-                                گرافیک
-                            </a>
-                            <a href="#">
-                                فایل صوتی
-                            </a>
-                            <a href="#">
-                                سه بعدی و ویدیو
-                            </a>
-                            <a href="#">
-                                برنامه نویسی
-                            </a>
+                                <a href="#">
+                                    قالب سایت
+                                </a>
+                                <a href="#">
+                                    گرافیک
+                                </a>
+                                <a href="#">
+                                    فایل صوتی
+                                </a>
+                                <a href="#">
+                                    سه بعدی و ویدیو
+                                </a>
+                                <a href="#">
+                                    برنامه نویسی
+                                </a>
+                            </div>
                         </div>
-                    </div>
 
-                    <li>
-                        <a href="#">بلاگ</a>
-                    </li>
-                    <div class="subnav">
-                        <button class="subnav-btn">دانلود</button>
-                        <div class="subnav-content" id="sub-nav-2">
+                        <li>
+                            <a href="#">بلاگ</a>
+                        </li>
+                        <div class="subnav">
+                            <button class="subnav-btn">دانلود</button>
+                            <div class="subnav-content" id="sub-nav-2">
 
-                            <a href="#">
-                                وب نویسی
-                            </a>
-                            <a href="#">
-                                گرافیک
-                            </a>
-                            <a href="#">
-                                آهنگ سازی و تدوین صدا
-                            </a>
-                            <a href="#">
-                                سه بعدی و ویدیو
-                            </a>
-                            <a href="#">
-                                برنامه نویسی
-                            </a>
+                                <a href="#">
+                                    وب نویسی
+                                </a>
+                                <a href="#">
+                                    گرافیک
+                                </a>
+                                <a href="#">
+                                    آهنگ سازی و تدوین صدا
+                                </a>
+                                <a href="#">
+                                    سه بعدی و ویدیو
+                                </a>
+                                <a href="#">
+                                    برنامه نویسی
+                                </a>
 
+                            </div>
                         </div>
-                    </div>
-                    <li>
-                        <a href="#">قوانین</a>
-                    </li>
-                    <li>
-                        <a href="#">تماس با ما</a>
-                    </li>
-                    <li>
-                        <a href="#">درباره ما</a>
-                    </li>
-                </ul>
-            </nav>
+                        <li>
+                            <a href="#">قوانین</a>
+                        </li>
+                        <li>
+                            <a href="#">تماس با ما</a>
+                        </li>
+                        <li>
+                            <a href="#">درباره ما</a>
+                        </li>
+                    </ul>
+                </nav>
 
-            <!-- search and profile buttons section -->
-            <div class=" navbar-left   search-panel">
-                <button class="btn search-btn"><i class="fas fa-search"></i> </button>
-                <button class="btn user-btn"><i class="fas fa-user"></i> </button>
-            </div>
-        </div>
-
-
-        <!-- hidden search bar at load (shown on search btn click) -->
-        <div id="search-nav" class="row">
-            <!-- search button -->
-            <div class="col-sm-1 col-3 search-panel-right">
-                <a class="header-link"><i class="fas fa-search"></i> </a>
-                <span></span>
+                <!-- search and profile buttons section -->
+                <div class=" navbar-left   search-panel">
+                    <button class="btn search-btn"><i class="fas fa-search"></i> </button>
+                    <button class="btn user-btn"><i class="fas fa-user"></i> </button>
+                </div>
             </div>
 
-            <!-- search input -->
-            <div class="col-sm-10 col-6 search-input">
-                <input type="text" name="search" id="search-bar" placeholder=" اینجا جستجو کنید..." autofocus>
+
+            <!-- hidden search bar at load (shown on search btn click) -->
+            <div id="search-nav" class="row">
+                <!-- search button -->
+                <div class="col-sm-1 col-3 search-panel-right">
+                    <a class="header-link"><i class="fas fa-search"></i> </a>
+                    <span></span>
+                </div>
+
+                <!-- search input -->
+                <div class="col-sm-10 col-6 search-input">
+                    <input type="text" name="search" id="search-bar" placeholder=" اینجا جستجو کنید..." autofocus>
+                </div>
+
+                <!-- close search button -->
+                <div class="col-sm-1 col-3">
+                    <a id="close-search" class="header-link"><i class="fas fa-times"></i> </a>
+                </div>
             </div>
 
-            <!-- close search button -->
-            <div class="col-sm-1 col-3">
-                <a id="close-search" class="header-link"><i class="fas fa-times"></i> </a>
-            </div>
-        </div>
 
-
-    </header>
-
+        </header>
+    </div>
     <!-- this div is common in all pages -->
     <!-- white bottom nav bar -->
     <div id="nav-bottom" class="navbar-bottom row d-flex justify-content-center">
@@ -260,7 +262,7 @@
                         <span id="register-emailerror"></span>
                         <i style="text-align: left" class="fas fa-exclamation-triangle"></i>
                     </div>
-                 
+
                     <!-- pass label -->
                     <p id="register-pass-label" class="hidden-title">رمز عبور</p>
 
@@ -301,17 +303,18 @@
                         <i style="text-align: left" class="fas fa-exclamation-triangle"></i>
                     </div>
                     <div class="select-div col-sm-12">
-                        <select title="نقش خود را انتخاب کنید" name="role" class="selectpicker"  data-live-search="true">
-                                <option>دانشجو</option>
-                                <option>استاد</option>
-                                <option>مدیر</option>
-                                <option>کارمند</option>
-                                <option>استاد و مدیر</option>
+                        <select title="نقش خود را انتخاب کنید" name="role" class="selectpicker" data-live-search="true">
+                            <option>دانشجو</option>
+                            <option>استاد</option>
+                            <option>مدیر</option>
+                            <option>کارمند</option>
+                            <option>استاد و مدیر</option>
                         </select>
-                     </div>
+                    </div>
                     <!-- register button -->
                     <div class="login-button form-group  col-sm-12 inline-div" style="margin-top : 3%;">
-                        <button type="button" id="register-submit" class=" col-sm-5 btn  btn-block btn-success">ثبت نام</button>
+                        <button type="button" id="register-submit" class=" col-sm-5 btn  btn-block btn-success">ثبت
+                            نام</button>
                     </div>
 
                     <!-- register with google button -->
@@ -328,7 +331,7 @@
                 <!-- circle image -->
                 <div class="circle-img col-sm-12">
                     <div class="circle">
-                        <img class="leftside-top" src="../Assets/images/shahid_beheshti_university.jpg" alt="sbu">           
+                        <img class="leftside-top" src="../Assets/images/shahid_beheshti_university.jpg" alt="sbu">
                     </div>
                 </div>
                 <!-- switch to login -->
@@ -408,7 +411,7 @@
                     <!-- login with google button -->
                     <div class="login-button form-group  col-sm-12">
                         <button type="button" class=" col-sm-12 col-md-5 btn btn-block btn-social btn-google">
-                            <i class="fab fa-google"></i> ورود با  گوگل
+                            <i class="fab fa-google"></i> ورود با گوگل
                         </button>
 
                     </div>
@@ -425,7 +428,7 @@
                 <!-- circle image -->
                 <div class="circle-img col-sm-12">
                     <div class="circle">
-                            <img class="leftside-top" src="../Assets/images/shahid_beheshti_university.jpg" alt="sbu">   
+                        <img class="leftside-top" src="../Assets/images/shahid_beheshti_university.jpg" alt="sbu">
                     </div>
                 </div>
 
