-fix chat-btn position

--- a/pages/login.html
+++ b/pages/login.html
@@ -448,11 +448,11 @@
 
 
     <!-- bottom fixed position chat button -->
-    <div class="circle circle-btn"
-        style="position : absolute; bottom : 5px; left : 5px; width : 60px; height: 60px; background-color:rgb(37, 37, 37); z-index: 1">
+    <div class="chat-div">
+    <div class="circle circle-btn chat-btn">
         <i style="font-size : 40px; padding-top : 20%; padding-left: 15%" class="fas fa-comment-dots"></i>
     </div>
-
+</div>
     <!-- this div is common in all pages -->
     <!-- footer consists social links and copy right -->
     <footer>
