--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <script src="pages/login/loginController.js"></script>
     <script src="pages/dashboard/dashboardController.js"></script>
     <script src="pages/casesStatus/caseStatusController.js"></script>
+    <script src="pages/profile/profileController.js"></script>
 
     <script src="js/dashboard/node_modules/popper/popper.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
