--- a/pages/EditProfile/EditProfile.html
+++ b/pages/EditProfile/EditProfile.html
@@ -12,9 +12,9 @@
 
     <title>Login</title>
 
-    <link rel="stylesheet" href="../css/global.css">
-    <link rel="stylesheet" href="../css/atiehno.css">
-    <link rel="stylesheet" href="../css/dorsasam.css">
+    <link rel="stylesheet" href="../../css/global.css">
+    <link rel="stylesheet" href="../../css/atiehno.css">
+    <link rel="stylesheet" href="../../css/dorsasam.css">
     <link rel="stylesheet" href="../css/hanieiz.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -31,7 +31,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/js/bootstrap-select.min.js"></script>
     <script src="../js/app.js"></script>
-    <script src="../js/dorsasam.js"></script>
+    <script src="../../js/dorsasam.js"></script>
 
 </head>
 
