-add reporting page,authentication

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
     <script src="pages/dashboard/dashboardController.js"></script>
     <script src="pages/casesStatus/caseStatusController.js"></script>
     <script src="pages/profile/profileController.js"></script>
+    <script src="pages/reporting/reportController.js"></script>
 
     <script src="js/dashboard/node_modules/popper/popper.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
