--- a/pages/reporting/reporting.html
+++ b/pages/reporting/reporting.html
@@ -134,6 +134,26 @@
                 </div>
 
                 <div class="row statistic-section col-md-12 ">
+                    <div class="col-sm-8">
+                        <div class="card">
+
+                            <div class="card-body">
+                                <h4 class="card-title m-b-0">زمان بندی مورد ها</h4>
+                                <div id="chartdiv" ></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="card  date-section">
+                            <div class="card-body">
+                                <h4 class=" text-right card-title m-b-0">مورد ها براساس بازه زمانی </h4>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row statistic-section col-md-12 ">
                     <div class="col-sm-6">
                         <div class="card">
 
@@ -286,7 +306,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="row col-sm-12 text-right ">
                     <div class="col-sm-6">
                         <div class="card">
