--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/css/bootstrap-select.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-social/5.1.1/bootstrap-social.css" />
 
-    
+
     <link href="css/style.css" rel="stylesheet">
     <!-- dashboard page -->
     <link rel="icon" type="image/png" sizes="16x16" href="Assets/images/shahid_beheshti_university.jpg">
@@ -35,16 +35,21 @@
 </head>
 
 
-<body ng-app="app" dir="rtl" >
+<body ng-app="app" dir="rtl">
     <div ng-view></div>
     <script> baseUrl = ''</script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+    integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
+
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.9/js/bootstrap-select.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9//angular-route.min.js"></script>
 
     <script src="js/app.js"></script>
+
+
     <script src="pages/landing/landingController.js"></script>
     <script src="pages/login/loginController.js"></script>
     <script src="pages/dashboard/dashboardController.js"></script>
@@ -55,6 +60,9 @@
     <script src="js/dashboard/node_modules/popper/popper.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
     <script src="js/dashboard/perfect-scrollbar.jquery.min.js"></script>
+    <script src="js/charts/core.js"></script>
+    <script src="js/charts/charts.js"></script>
+    <script src="js/charts/animated.js"></script>
     <!--Menu sidebar -->
     <script src="js/dashboard/sidebarmenu.js"></script>
 
