-add charts to report page

--- a/pages/reporting/reporting.html
+++ b/pages/reporting/reporting.html
@@ -133,7 +133,7 @@
                     </div>
                 </div>
 
-                <div class="row statistic-section col-md-12 ">
+                <div class="row time-section col-md-12 ">
                     <div class="col-sm-8">
                         <div class="card">
 
@@ -146,7 +146,50 @@
                     <div class="col-sm-4">
                         <div class="card  date-section">
                             <div class="card-body">
-                                <h4 class=" text-right card-title m-b-0">مورد ها براساس بازه زمانی </h4>
+                                <h4 class=" text-right card-title m-b-0">ساعت </h4>
+                                <div id="clockdiv" ></div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row user-section col-md-12 ">
+                    <div class="col-sm-6">
+                        <div class="card">
+
+                            <div class="card-body">
+                                <h4 class="card-title m-b-0">برترین کاربران بر حسب تعداد مورد های انجام داده</h4>
+                                <div id="userdiv" ></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4 class=" text-right card-title m-b-0">وضعیت موارد ثبت شده </h4>
+                                <div id="piediv" ></div>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row info-section col-md-12 ">
+                    <div class="col-sm-6">
+                        <div class="card">
+
+                            <div class="card-body">
+                                <h4 class="card-title m-b-0">شروع و پایان مورد ها</h4>
+                                <div id="timechart" ></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="card">
+                            <div class="card-body">
+                                <h4 class=" text-right card-title m-b-0">کلمات پر تکرار در موارد</h4>
+                                <div id="worddiv" ></div>
 
                             </div>
                         </div>
