--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
     <script src="js/charts/core.js"></script>
     <script src="js/charts/charts.js"></script>
     <script src="js/charts/animated.js"></script>
+    <script src="js/charts/wordCloud.js"></script>
     <!--Menu sidebar -->
     <script src="js/dashboard/sidebarmenu.js"></script>
 
