-change report themes

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <script src="js/charts/charts.js"></script>
     <script src="js/charts/animated.js"></script>
     <script src="js/charts/wordCloud.js"></script>
+    <script src="js/charts/frozen.js"></script>
     <!--Menu sidebar -->
     <script src="js/dashboard/sidebarmenu.js"></script>
 
