--- a/pages/reporting/reporting.html
+++ b/pages/reporting/reporting.html
@@ -147,8 +147,19 @@
                         <div class="card  date-section">
                             <div class="card-body">
                                 <h4 class=" text-right card-title m-b-0">ساعت </h4>
-                                <div id="clockdiv" ></div>
-
+                                <div class="clock">
+                                    <div class="outer-clock-face">
+                                      <div class="marking marking-one"></div>
+                                      <div class="marking marking-two"></div>
+                                      <div class="marking marking-three"></div>
+                                      <div class="marking marking-four"></div>
+                                      <div class="inner-clock-face">
+                                        <div class="hand hour-hand"></div>
+                                        <div class="hand min-hand"></div>
+                                        <div class="hand second-hand"></div>
+                                      </div>
+                                    </div>
+                                  </div>
                             </div>
                         </div>
                     </div>
