--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -78,8 +78,8 @@
                         <li> <a class="waves-effect waves-dark"
                                 href="http://localhost:8080/IE-proj//index.html#!/profile" aria-expanded="false"><i
                                     class="fa fa-user"></i><span class="hide-menu">پروفایل</span></a></li>
-                        <li> <a class="waves-effect waves-dark"
-                                href="http://localhost:8080/IE-proj//index.html#!/dashboard" aria-expanded="false"><i
+						<li> <a class="waves-effect waves-dark"
+                                href="http://localhost:8080/IE-proj//index.html#!/case" aria-expanded="false"><i
                                     class="fa fa-table"></i><span class="hide-menu"></span>ثبت مورد</a></li>
                         <li> <a class="waves-effect waves-dark"
                                 href="http://localhost:8080/IE-proj//index.html#!/status" aria-expanded="false"><i
