--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     <script src="pages/casesStatus/caseStatusController.js"></script>
     <script src="pages/profile/profileController.js"></script>
     <script src="pages/reporting/reportController.js"></script>
+	<script src="pages/CreateCase/caseController.js"></script>
 
     <script src="js/dashboard/node_modules/popper/popper.min.js"></script>
     <!-- slimscrollbar scrollbar JavaScript -->
