--- a/pages/DoCase/doCase.html
+++ b/pages/DoCase/doCase.html
@@ -83,6 +83,10 @@
                         <li> <a class="waves-effect waves-dark"
                                 href="http://localhost:8080/IE-proj//index.html#!/case" aria-expanded="false"><i
                                     class="fa fa-table"></i><span class="hide-menu"></span>ثبت مورد</a></li>
+                        <li ng-class="adminAccess"><a class="waves-effect waves-dark"
+                                 href="http://localhost:8080/IE-proj//index.html#!/authorize" aria-expanded="false"><i
+                                class="far fa-check-square"></i><span class="hide-menu"></span>تایید کاربران</a>
+                        </li>
                         <li> <a class="waves-effect waves-dark"
                                 href="http://localhost:8080/IE-proj//index.html#!/dashboard" aria-expanded="false"><i
                                     class="fas fa-star-half-alt"></i><span class="hide-menu"></span> وضعیت موارد ثبت
