--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -86,6 +86,10 @@
                                     class="fas fa-star-half-alt"></i><span class="hide-menu"></span> وضعیت موارد ثبت
                                 شده</a></li>
                         <li ng-class="adminAccess"><a class="waves-effect waves-dark"
+                                 href="http://localhost:8080/IE-proj//index.html#!/authorize" aria-expanded="false"><i
+                                class="far fa-check-square"></i><span class="hide-menu"></span>تایید کاربران</a>
+                        </li>
+                        <li ng-class="adminAccess"><a class="waves-effect waves-dark"
                                 href="http://localhost:8080/IE-proj//index.html#!/status" aria-expanded="false"><i
                                     class="fas fa-tasks"></i><span class="hide-menu"></span> مدیریت کاربران
                             </a></li>
