--- a/pages/CreateCase/case.html
+++ b/pages/CreateCase/case.html
@@ -89,7 +89,7 @@
                                     class="fas fa-star-half-alt"></i><span class="hide-menu"></span> وضعیت موارد ثبت
                                 شده</a></li>
 						<li ng-class="adminAccess"><a class="waves-effect waves-dark"
-                                href="http://localhost:8080/IE-proj//index.html#!/authorizeUsers" aria-expanded="false"><i
+                                href="http://localhost:8080/IE-proj//index.html#!/authorize" aria-expanded="false"><i
                                     class="fas fa-check-square"></i><span class="hide-menu"></span> تایید کاربران
                             </a></li>
                         <li ng-class="adminAccess"><a class="waves-effect waves-dark"
