--- a/pages/userAuthorize/userAuthorize.html
+++ b/pages/userAuthorize/userAuthorize.html
@@ -8,20 +8,11 @@
 
     <!-- Custom CSS -->
     <link href="css/global.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="../css/style.css" rel="stylesheet">
-    <!-- Custom CSS -->
-    <link href="../css/dorsasam.css" rel="stylesheet">
-    <!-- Custom CSS -->
 
-    <!-- Custom CSS -->
+    <link href="../css/dorsasam.css" rel="stylesheet">
 
     <link href="css/dashboard.css" rel="stylesheet">
-    <!-- Dashboard 1 Page CSS -->
-    <link href="../css/backgroundStyle.css" rel="stylesheet">
 
-    <!--java script library-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="authorizeController.js"></script>
 
 <script>
@@ -114,15 +105,15 @@
                             href="http://localhost:8080/IE-proj//index.html#!/status" aria-expanded="false"><i
                             class="fas fa-star-half-alt"></i><span class="hide-menu"></span> وضعیت موارد ثبت
                         شده</a></li>
-                    <li ng-class="adminAccess"><a class="waves-effect waves-dark"
+                    <li ><a class="waves-effect waves-dark"
                                                   href="http://localhost:8080/IE-proj//index.html#!/authorize" aria-expanded="false"><i
                             class="fas fa-check-square"></i><span class="hide-menu"></span> تایید کاربران
                     </a></li>
-                    <li ng-class="adminAccess"><a class="waves-effect waves-dark"
-                                                  href="http://localhost:8080/IE-proj//index.html#!/status" aria-expanded="false"><i
+                    <li ><a class="waves-effect waves-dark"
+                                                  href="http://localhost:8080/IE-proj//index.html#!/manageusers" aria-expanded="false"><i
                             class="fas fa-tasks"></i><span class="hide-menu"></span> مدیریت کاربران
                     </a></li>
-                    <li ng-class="adminAccess"><a class="waves-effect waves-dark"
+                    <li ><a class="waves-effect waves-dark"
                                                   href="http://localhost:8080/IE-proj//index.html#!/report" aria-expanded="false"><i
                             class="far fa-newspaper"></i><span class="hide-menu"></span>گزارش گیری از سیستم</a>
                     </li>
