-add json files ,on tr click to go docase.page

--- a/pages/dashboard/dashboard.html
+++ b/pages/dashboard/dashboard.html
@@ -141,7 +141,7 @@
 
                                         <thead class="thead-light">
 
-                                            <tr>
+                                            <tr >
                                                 <td>شماره</td>
                                                 <td>موضوع</td>
                                                 <td>ارجاع به</td>
@@ -153,7 +153,7 @@
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            <tr>
+                                            <tr  onclick = "window.location = $(this).data('href');" data-href=  "index.html#!/docase">
                                                 <td>۱</td>
                                                 <td>سیستم سرمایش</td>
                                                 <td>عطیه نوروززاده</td>
@@ -163,7 +163,7 @@
                                                 <td><span class="badge badge-pill badge-info">معمولی</span> </td>
                                                 <td> 1397/03/27 17:09 </td>
                                             </tr>
-                                            <tr>
+                                            <tr onclick = "window.location = $(this).data('href');" data-href=  "index.html#!/docase">
                                                 <td>۲</td>
                                                 <td>سیستم سرمایش</td>
                                                 <td>عطیه نوروززاده</td>
@@ -173,7 +173,7 @@
                                                 <td><span class="badge badge-pill badge-danger">اورژانسی</span> </td>
                                                 <td> 1397/03/27 17:09 </td>
                                             </tr>
-                                            <tr>
+                                            <tr onclick = "window.location = $(this).data('href');" data-href=  "index.html#!/docase">
                                                 <td>۳</td>
                                                 <td>سیستم سرمایش</td>
                                                 <td>عطیه نوروززاده</td>
@@ -184,7 +184,7 @@
                                                 </td>
                                                 <td> 1397/03/27 17:09 </td>
                                             </tr>
-                                            <tr>
+                                            <tr onclick = "window.location = $(this).data('href');" data-href=  "index.html#!/docase">
                                                 <td>۴</td>
                                                 <td>سیستم سرمایش</td>
                                                 <td>عطیه نوروززاده</td>
@@ -194,7 +194,7 @@
                                                 <td><span class="badge badge-pill badge-warning">متوسط</span> </td>
                                                 <td> 1397/03/27 17:09 </td>
                                             </tr>
-                                            <tr>
+                                            <tr onclick = "window.location = $(this).data('href');" data-href=  "index.html#!/docase">
                                                 <td>۵</td>
                                                 <td>سیستم سرمایش</td>
                                                 <td>عطیه نوروززاده</td>
@@ -204,7 +204,7 @@
                                                 <td><span class="badge badge-pill badge-danger">اورژانسی</span> </td>
                                                 <td> 1397/03/27 17:09 </td>
                                             </tr>
-                                            <tr>
+                                            <tr onclick = "window.location = $(this).data('href');" data-href=  "index.html#!/docase">
                                                 <td>۶</td>
                                                 <td>سیستم سرمایش</td>
                                                 <td>عطیه نوروززاده</td>
